--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -56,6 +56,7 @@
       height: 180px;
       background: clr(gradient, secondary);
       border-radius: 50%;
+      transition: background 0.3s linear, transform 0.3s linear;
       @include font-style(65, extrabold);
       &:hover {
         transform: scale(1.2);
@@ -99,6 +100,8 @@
       &--reaction {
         background-color: hsl(var(--lb-clr-primary-100), 0.1);
         border: 1px solid hsl(var(--lb-clr-primary-100), 0.1);
+        transition: background 0.3s linear, transform 0.3s linear;
+
         h3 {
           color: hsl(var(--lb-clr-primary-100));
         }
@@ -117,6 +120,7 @@
       &--memory {
         background-color: hsl(var(--lb-clr-primary-200), 0.1);
         border: 1px solid hsl(var(--lb-clr-primary-200), 0.1);
+        transition: background 0.3s linear, transform 0.3s linear;
         h3 {
           color: hsl(var(--lb-clr-primary-200));
         }
@@ -135,6 +139,7 @@
       &--verbal {
         background-color: hsl(var(--lb-clr-primary-300), 0.1);
         border: 1px solid hsl(var(--lb-clr-primary-300), 0.1);
+        transition: background 0.3s linear, transform 0.3s linear;
         h3 {
           color: hsl(var(--lb-clr-primary-300));
         }
@@ -153,6 +158,7 @@
       &--visual {
         background-color: hsl(var(--lb-clr-primary-400), 0.1);
         border: 1px solid hsl(var(--lb-clr-primary-400), 0.1);
+        transition: background 0.3s linear, transform 0.3s linear;
         h3 {
           color: hsl(var(--lb-clr-primary-400));
         }
